Set default download to release builds, and update download warnings. (Fixes #745/#746)

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -18,6 +18,7 @@
 @import "./new/components/announcement.less";
 @import "./new/components/footer.less";
 @import "./new/components/blocks.less";
+@import "./new/components/notice-panel.less";
 
 // Page imports
 @import "./pages/donations.less";
