--- a/sites/www.thunderbird.net/includes/macros/download-smart.html
+++ b/sites/www.thunderbird.net/includes/macros/download-smart.html
@@ -13,7 +13,7 @@ Macros:
 #}
 {% from 'includes/macros/download-desktop.html' import download_desktop_btns with context %}
 {% from 'includes/macros/download-mobile.html' import download_mobile_btns with context %}
-{% macro download_smart(btn_class = 'btn-gradient', container_class = 'download-button-products', force_platform='all', desktop_channel = 'esr', hide_download_options = False, hide_donate_footer = False, form_id=settings.FRU_FORM_IDS['support']) -%}
+{% macro download_smart(btn_class = 'btn-gradient', container_class = 'download-button-products', force_platform='all', desktop_channel = settings.DEFAULT_RELEASE_VERSION, hide_download_options = False, hide_donate_footer = False, form_id=settings.FRU_FORM_IDS['support']) -%}
 {# Note: force_platform = 'all' | 'android' | 'desktop' #}
 {% if not hide_download_options %}
 {% include 'includes/download-and-options.html' %}
