Switch to apr25 instead of mar25

--- a/assets/less/appeals/dec24.less
+++ b/assets/less/appeals/dec24.less
@@ -40,7 +40,7 @@
 }
 
 // Scope to just the appeal page
-.page-appeal-dec24, .page-appeal-mar25 {
+.page-appeal-dec24, .page-appeal-apr25 {
   background-color: black;
 
 
