Add the announcement and clean up some announcement css

--- a/assets/less/new/components/announcement.less
+++ b/assets/less/new/components/announcement.less
@@ -1,5 +1,13 @@
 :root {
+  /* Adjust these as needed by the text amount */
   --site-announcement-height: 2.625rem; // 42px;
+  --site-announcement-padding: 0rem;
+
+  @media (max-width: @sm) {
+    --site-announcement-height: 4.25rem; // 68px;
+    --site-announcement-padding: 0;
+  }
+
 }
 
 .site-announcement {
@@ -7,6 +15,8 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  padding: var(--site-announcement-padding);
+  text-align: center;
 
   position: absolute;
   top: 0;
@@ -18,6 +28,10 @@
   color: var(--color-white);
   font-size: 80%;
   font-weight: 500;
+}
+
+.site-announcement > .strong::after {
+  top: 0.22rem;
 }
 
 .site-announcement ~ .site-nav {
