--- a/sites/www.thunderbird.net/includes/announcement.html
+++ b/sites/www.thunderbird.net/includes/announcement.html
@@ -1,1 +1,8 @@
-<div class="site-announcement"></div>
+{# Adjust the css variables in announcements.less if text is cut-off or wraps weirdly. #}
+<div class="site-announcement">
+  <a class="strong" href="https://blog.thunderbird.net" target="_blank">
+    {% trans trimmed %}
+      Thunderbird Monthly releases are now the default download. Click to learn more
+    {% endtrans %}
+  </a>
+</div>
