--- a/sites/updates.thunderbird.net/includes/base/footer.html
+++ b/sites/updates.thunderbird.net/includes/base/footer.html
@@ -1,8 +1,15 @@
+{% set use_new_mozilla_logo = use_new_mozilla_logo|default(False) %}
 <footer id="footer">
   <div class="mzla container" >
-    <a href="https://mozilla.org" class="mozilla-logo">
-      {{ svg('Mozilla_Logo') }}
-    </a>
+    {% if use_new_mozilla_logo %}
+      <a href="https://mozilla.org" class="mozilla-logo">
+        {{ svg('mozilla-logo-wordmark') }}
+      </a>
+      {% else %}
+      <a href="https://mozilla.org" class="mozilla-logo">
+        {{ svg('Mozilla_Logo') }}
+      </a>
+      {% endif %}
     <div class="legal-links">
       <a href="{{ url('privacy') }}" data-link-type="footer"
          data-link-name="Privacy">{{ _('Privacy') }}</a>
