--- a/assets/less/appeals/apr25.less
+++ b/assets/less/appeals/apr25.less
@@ -17,17 +17,13 @@
 @mxl: 73.75rem; // 1180px
 
 :root {
-  --bg-img: url('/media/img/thunderbird/appeal/dec24/background-image-high-res.png');
-  --bg-img-set: image-set(
-      url('/media/img/thunderbird/appeal/dec24/background-image-high-res.avif') type('image/avif'),
-      url('/media/img/thunderbird/appeal/dec24/background-image-high-res.webp') type('image/webp'),
-      var(--bg-img) type('image/png')
-    );
+  --bg-img: linear-gradient(180deg, #54B9E5 0%, #FBF8E7 31.5%, #FBF8E7 43%, #FFF0A3 66%, #FFC068 100%);
 
   --bg-appeal-glow: linear-gradient(130deg, rgba(255, 242, 0, 0.25) 50%, #26BAF5 100%);
 
   --color-appeal-main-bg: var(--color-white);
   --color-footer-txt: #105BBC;
+  --color-appeal-heading-txt: #F34576;
   --color-appeal-txt: #18181B;
   --color-appeal-bg-border: #1373D9;
 
@@ -36,45 +32,35 @@
 
   --font-content: Open Sans, system-ui, sans-serif;
   --min-small-screen: 23.438rem;
-
 }
 
 // Scope to just the appeal page
-.page-appeal-dec24 {
-  background-color: black;
-
+.page-appeal-apr25 {
 
   body {
-    max-width: 80rem;
     margin: auto;
-    min-width: 23.438rem;
+    min-width: var(--min-small-screen);
     min-height: 100vh;
     font-family: var(--font-content);
     line-height: 1.6;
-    background-color: #0f345e;
-  }
+    background: var(--bg-img);
+    animation: sunset-gradient-linear 300s ease infinite;
+    background-size: 400% 400%;
 
-  #header-gradient {
-    --bg-color: linear-gradient(to bottom, rgba(20, 64, 92, 0) 35%, #0f345e 75%);
-    background: var(--bg-color);
-    position: absolute;
-    width: 100%;
-    height: 40rem;
-    overflow: clip;
-    pointer-events: none;
+    // No moving gradients for folks who don't want it.
+    @media (prefers-reduced-motion: reduce) {
+      animation: none;
+      background-size: 100% 100%;
+    }
   }
 
   #appeal-header {
     display: flex;
     flex-direction: column-reverse;
     padding-bottom: 7rem;
-
-    background-image: var(--bg-img);
-    background-image: var(--bg-img-set);
-    background-position: calc(100%) top;
-    background-size: cover;
-    background-repeat: no-repeat;
-
+    max-width: 80rem;
+    margin: auto;
+    margin-bottom: 2rem;
 
     header {
       padding: 0;
@@ -98,8 +84,7 @@
   }
 
   #appeal-heading {
-    --txt: #f7cf78;
-    margin: 0.5rem 0;
+    --txt: var(--color-appeal-heading-txt);
     padding: 2.2rem 2rem 1.8rem 2rem;
     text-align: left;
     display: flex;
@@ -167,16 +152,14 @@
     &:after {
       content: '';
       position: absolute;
-      left: 0;
-      right: 0;
+      display: block;
+      max-width: 60rem;
       background: var(--bg-appeal-glow);
-      margin: -1rem 2.375rem;
-      /* border-radius: 0.75rem; */
+      margin: auto;
       filter: blur(2.75rem);
       opacity: 0.8;
       inset: 11.75rem;
       z-index: 0;
-      /* z-index: -1; */
     }
 
     &:before {
@@ -413,5 +396,4 @@
     justify-content: flex-end;
     text-align: right;
   }
-
 }
