Add missing text casing changes for spring appeal (#775)

--- a/assets/less/appeals/apr25.less
+++ b/assets/less/appeals/apr25.less
@@ -104,7 +104,7 @@
       margin: -1.8rem 0;
     }
 
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-family: var(--font-content);
     font-size: 1.25rem;
     font-weight: 500;
@@ -118,6 +118,7 @@
       font-weight: 700;
       line-height: 2.5rem;
       text-shadow: 0 0.125rem 0 #b62749;
+      text-transform: uppercase;
       @media (min-width: @md) {
         font-size: 4.375rem;
         line-height: 4.375rem;
