Add donation notice to inform user if FRU is blocked (within 7.5 secs) (Fixes #792)

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -19,6 +19,7 @@
 @import "./new/components/footer.less";
 @import "./new/components/blocks.less";
 @import "./new/components/notice-panel.less";
+@import "./new/components/dialog.less";
 
 // Page imports
 @import "./pages/donations.less";
