--- a/sites/www.thunderbird.net/includes/base/base.html
+++ b/sites/www.thunderbird.net/includes/base/base.html
@@ -88,6 +88,10 @@
       </noscript>
     {% endblock %}
 
+    {% if settings.SHOW_DONATION_BLOCKED_NOTICE %}
+    {% include 'includes/donation-blocked-notice.html' %}
+    {% endif %}
+
     {% block js %}{% endblock %}
   </body>
 </html>
