--- a/sites/www.thunderbird.net/includes/download-button.html
+++ b/sites/www.thunderbird.net/includes/download-button.html
@@ -99,6 +99,6 @@
     {% endfor %}
   </ul>
   {% if not hide_footer_links %}
-  <small>{{_('Free forever.')}} <a class="dotted" href="{{ donate_url('header') }}">{{_('Donate')}}</a> {{_('to make it better.')}}</small>
+  <small>{{_('Free forever.')}} <a data-donate-btn class="dotted" href="{{ donate_url('header') }}">{{_('Donate')}}</a> {{_('to make it better.')}}</small>
   {% endif %}
 </div>
