--- a/sites/www.thunderbird.net/includes/macros/download-smart.html
+++ b/sites/www.thunderbird.net/includes/macros/download-smart.html
@@ -45,6 +45,6 @@ Macros:
     </div>
   {% endif %}
 {% if not hide_donate_footer %}
-<small>{{_('Free forever.')}} <a class="dotted" href="{{ donate_url('header', form_id=form_id) }}">{{_('Donate')}}</a> {{_('to make it better.')}}</small>
+<small>{{_('Free forever.')}} <a data-donate-btn class="dotted" href="{{ donate_url('header', form_id=form_id) }}">{{_('Donate')}}</a> {{_('to make it better.')}}</small>
 {% endif %}
 {% endmacro %}
