Add to updates.thunderbird.net, adjust timing to 10secs, and fix donate page logic.

--- a/sites/updates.thunderbird.net/includes/base/base.html
+++ b/sites/updates.thunderbird.net/includes/base/base.html
@@ -93,6 +93,10 @@
   </p></noscript>
 {% endblock %}
 
+{% if settings.SHOW_DONATION_BLOCKED_NOTICE %}
+{% include 'includes/donation-blocked-notice.html' %}
+{% endif %}
+
 {% block js %}{% endblock %}
 </body>
 </html>
