--- a/assets/less/updates-style.less
+++ b/assets/less/updates-style.less
@@ -19,6 +19,7 @@
 @import "./new/components/footer.less";
 @import "./new/components/appeal-footer.less";
 @import "./new/components/donate-cta.less";
+@import "./new/components/dialog.less";
 
 // Ensure the footer is contained at the bottom and by default the page extends to at least a full page.
 html, body {
