--- a/sites/www.thunderbird.net/includes/donation-blocked-notice.html
+++ b/sites/www.thunderbird.net/includes/donation-blocked-notice.html
@@ -4,12 +4,9 @@
     <div class="close-btn" aria-label="{{ _('Close Notice.') }}">{{ svg('close') }}</div>
   </div>
   <p>
-    {{ _('Your browser or browser extension may be blocking our donation platform.') }}
+    {{ _('Your browser or an extension might be blocking our donation platform, Fundraise Up.') }}
   </p>
   <p>
-    {{ _('Please try again in private browsing or incognito mode or try again in another browser.') }}
-  </p>
-  <p>
-    {{ _('The Thunderbird Team') }}
+    {{ _(' Please try again using private browsing (incognito mode) or switch to another browser.') }}
   </p>
 </dialog>
