Update donation notice message

--- a/sites/updates.thunderbird.net/includes/donation-blocked-notice.html
+++ b/sites/updates.thunderbird.net/includes/donation-blocked-notice.html
@@ -7,6 +7,6 @@
     {{ _('Your browser or an extension might be blocking our donation platform, Fundraise Up.') }}
   </p>
   <p>
-    {{ _(' Please try again using private browsing (incognito mode) or switch to another browser.') }}
+    {{ _('Please try again using a different browser, or temporarily disabling the extension.') }}
   </p>
 </dialog>
