--- a/assets/less/pages/donations.less
+++ b/assets/less/pages/donations.less
@@ -14,6 +14,7 @@
     flex-direction: row;
     gap: 2rem;
     margin: auto;
+    padding-inline: 2rem;
 
     @media (max-width: @lg) {
       flex-direction: column;
