--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -18,7 +18,7 @@
     background-position: bottom center, center;
     background-repeat: no-repeat;
     color: var(--color-gray-20);
-    padding-top: var(--nav-size);
+    padding-top: 0;
     isolation: isolate;
   }
 
