Override general 100% width

--- a/assets/less/pages/donations.less
+++ b/assets/less/pages/donations.less
@@ -15,6 +15,7 @@
     gap: 2rem;
     margin: auto;
     padding-inline: 2rem;
+    width: auto;
 
     @media (max-width: @lg) {
       flex-direction: column;
