Fixup product hero padding

--- a/assets/less/pages/products.less
+++ b/assets/less/pages/products.less
@@ -32,13 +32,13 @@
     background-repeat: no-repeat;
     color: var(--color-gray-20);
     isolation: isolate;
-    padding-top: var(--nav-size);
+    padding-top: 0;
 
     // More we take from the bottom, the more we need to pull back up
     padding-bottom: 10.5rem;
 
     @media (max-width: @md) {
-      margin-top: 0;
+      padding-top: var(--nav-height);
     }
 
 
