Update Mozilla logo to current lockup

--- a/assets/less/new/components/footer.less
+++ b/assets/less/new/components/footer.less
@@ -22,18 +22,12 @@ footer {
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
-  justify-content: center;
-}
-
-.legal-links {
   font-size: 1rem;
 }
 
-
-
-.mozilla-logo {
+.mozilla-logo svg {
   --accent: white;
-  max-width: 200px;
+  max-width: 10rem;
 }
 
 #footer {
@@ -45,10 +39,4 @@ footer {
   min-height: 10rem;
   display: flex;
   justify-content: center;
-
-
-  .mzla {
-    justify-content: flex-start;
-    align-content: center;
-  }
 }
