Use the same logo for updates

--- a/assets/less/new/components/updates-footer.less
+++ b/assets/less/new/components/updates-footer.less
@@ -14,12 +14,9 @@
     color: var(--color-gray-20);
   }
 
-  .mozilla-logo {
+  .mozilla-logo svg {
     --accent: white;
-  }
-
-  .mzla, .mozilla-logo {
-    max-height: 12.625rem;
+    max-width: 10rem;
   }
 
   .mzla, .legal-links, .footer-inner {
