--- a/sites/updates.thunderbird.net/includes/base/footer.html
+++ b/sites/updates.thunderbird.net/includes/base/footer.html
@@ -1,8 +1,8 @@
 <footer id="footer">
   <section class="footer-inner">
     <div class="mzla">
-      <a href="https://mozilla.org" class="mozilla-logo" title="{{ _('Mozilla') }}">
-        {{ svg('mozilla-lockup') }}
+      <a href="{{ url('mozorg.home') }}" class="mozilla-logo" title="{{ _('Mozilla') }}">
+        {{ svg('Mozilla_Logo') }}
       </a>
     </div>
     <div class="legal-links">
