--- a/sites/www.thunderbird.net/includes/appeal-footer.html
+++ b/sites/www.thunderbird.net/includes/appeal-footer.html
@@ -1,5 +1,5 @@
 <div class="mzla">
-  <a href="https://mozilla.org" class="mozilla-logo">
+  <a href="{{ url('mozorg.home') }}" class="mozilla-logo">
     {{ svg('Mozilla_Logo') }}
   </a>
   <div class="legal-links">
