--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="mzla">
-      <a href="https://mozilla.org" class="mozilla-logo">
+      <a href="{{ url('mozorg.home') }}" class="mozilla-logo">
         {{ svg('Mozilla_Logo') }}
       </a>
       <div class="legal-links">
