Update faq title to question format

--- a/sites/www.thunderbird.net/includes/faq.html
+++ b/sites/www.thunderbird.net/includes/faq.html
@@ -95,7 +95,7 @@
 
   <details class="accordion">
     <summary class="question">
-      {{ _('Data Collection and Privacy') }}
+      {{ _('How do you handle my data?') }}
     </summary>
     <p class="answer">
       {% trans trimmed privacy=url('privacy') %}
