Use deep link to payment details

--- a/sites/www.thunderbird.net/includes/faq.html
+++ b/sites/www.thunderbird.net/includes/faq.html
@@ -98,7 +98,7 @@
       {{ _('How do you handle my data?') }}
     </summary>
     <p class="answer">
-      {% trans trimmed privacy=url('privacy') %}
+      {% trans trimmed privacy=url('privacy.notices.donations') %}
         To learn more about the personal information we receive as part of the donation process, the third-party vendors we trust, and how long we keep your data, please review our
         <a href="{{ privacy }}">Websites, Communications & Cookies Privacy Notice</a>.
       {% endtrans %}
