Add affordance to major releases

--- a/assets/less/pages/releases.less
+++ b/assets/less/pages/releases.less
@@ -26,6 +26,15 @@
     min-width: 15%;
     margin-top: 0;
     text-align: left;
+
+    a {
+      text-decoration-color: var(--bg);
+      text-decoration-thickness: 1px;
+      text-underline-offset: 0.2em;
+      &:hover {
+        text-decoration-color: var(--accent);
+      }
+    }
   }
 
   .release-minors {
