Update donations fade-in

--- a/assets/less/pages/donations.less
+++ b/assets/less/pages/donations.less
@@ -51,7 +51,7 @@
         // Fade in so it's not super jarring...
         animation-duration: 2s;
         animation-name: fade-in;
-        transition: all .5s ease-in;
+        transition: none .5s ease-in;
 
         border: var(--border-size) solid var(--border-color);
         border-radius: var(--border-radius);
