Add council members on the about us page (Fixes #783)

--- a/assets/less/pages/who-we-are.less
+++ b/assets/less/pages/who-we-are.less
@@ -119,6 +119,11 @@
         }
       }
     }
+
+    // White-space hack works a little too well for Tim Maks 😅
+    #council-tim-maks-van-den-broek > h5 {
+      white-space: collapse;
+    }
   }
 
 }
