Improve monthly landing page stars.

--- a/assets/less/monthly.less
+++ b/assets/less/monthly.less
@@ -94,7 +94,6 @@
     .star-full {
       color: transparent;
       -webkit-text-stroke: 1px var(--color-blue-60);
-      text-shadow: 0 0 1px var(--color-gray-40);
     }
 
     .star-empty {
@@ -105,8 +104,7 @@
 
   .release-stars .star-full {
     color: var(--color-yellow-40);
-    -webkit-text-stroke: 0;
-    text-shadow: none;
+    -webkit-text-stroke: 1px var(--color-orange-40);
   }
 
   .release-stars .star-empty {
