Expose "Download" button to l10n

--- a/sites/www.thunderbird.net/includes/download/macros/download-desktop.html
+++ b/sites/www.thunderbird.net/includes/download/macros/download-desktop.html
@@ -20,7 +20,7 @@
               {{ plat.os_arch_pretty or plat.os_pretty }}
             </span>
             <span class="js-label">
-              {{ 'Download' }}
+              {{ _('Download') }}
             </span>
           </a>
         </div>
