Expose dekstop "Downloads" nav btn to l10n

--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -80,8 +80,8 @@
   </li>
   <li class="nav-entry no-border no-mobile nav-button-fix">
     <div class="header-download">
-      <a href="{{ url('thunderbird.latest.all') }}" class="btn btn-no-bg" aria-label="{{ _('Downloads') }}" title="{{ _('Find the latest version of Thunderbird.') }}">
-        Downloads
+      <a href="{{ url('thunderbird.latest.all') }}" class="btn btn-no-bg" title="{{ _('Find the latest version of Thunderbird.') }}">
+        {{_('Downloads')}}
       </a>
     </div>
   </li>
