Also translate "Home" root in breadcrumbs

--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -47,7 +47,7 @@
 
   {% block breadcrumbs %}
   <div class="breadcrumbs" aria-hidden="true">
-    Home > {% block category %}{% endblock %} >
+    {{_('Home')}} > {% block category %}{% endblock %} >
   </div>
   {% endblock %}
 
