--- a/assets/less/whatsnew-140.less
+++ b/assets/less/whatsnew-140.less
@@ -95,6 +95,7 @@ main {
     .header {
       display: flex;
       flex-direction: column;
+      align-items: center;
       padding: 3rem 6.25rem 1rem 9.25rem;
       z-index: 1;
       gap: 2.625rem;
@@ -108,7 +109,7 @@ main {
         width: 100%;
         align-content: flex-start;
         justify-content: space-between;
-        flex-shrink: 0;
+
 
         .header-logo {
           padding-top: 3.0rem;
@@ -121,8 +122,6 @@ main {
       }
 
       p.row {
-        padding-left: 5.9375rem;
-        padding-right: 9.0rem;
         max-width: 50.0rem;
 
         text-align: center;
@@ -137,18 +136,21 @@ main {
     }
 
     .features {
+      padding: 1rem;
+      box-sizing: border-box;
+
       .column {
         max-width: 31.375rem;
         gap: 2.25rem;
         display: flex;
         flex-direction: column;
-        flex-shrink: 0;
+
         flex-grow: 0;
       }
 
       width: 100%;
       display: flex;
-      flex-shrink: 0;
+
       flex-direction: row;
       justify-content: center;
       align-items: center;
@@ -198,7 +200,7 @@ main {
         gap: 2.0rem;
 
         img {
-          max-width: fit-content;
+          max-width: 100%;
         }
 
         p {
@@ -284,6 +286,7 @@ main {
       width: 100%;
       background-image: var(--cta-shadow-image);
       background-repeat: no-repeat;
+      background-position: top center;
       min-height: 300px;
       padding-top: 3.4375rem;
 
@@ -333,10 +336,10 @@ main {
       line-height: normal;
       letter-spacing: 0.03rem;
       text-transform: uppercase;
-      text-underline: none;
+      text-decoration: none;
 
       &:hover {
-        text-underline: none;
+        text-decoration: none;
       }
 
       // Button
@@ -365,8 +368,105 @@ main {
       background-image: var(--eclipse-image);
       background-repeat: no-repeat;
       background-size: 80rem;
+      background-position: top center;
       z-index: 0;
     }
   }
 
+  @media (max-width: @lg) {
+    .main-content {
+      .header {
+        padding: 1rem;
+
+        p.row {
+          padding: 0;
+        }
+      }
+      .features {
+        gap: 1rem;
+      }
+    }
+  }
+
+  @media (max-width: @sm) {
+    .main-content {
+      .header {
+        padding: 1rem;
+
+        .row {
+          .header-star-group {
+            display: none;
+          }
+        }
+
+        p.row {
+          font-size: 1.0143125rem
+        }
+      }
+
+      .card {
+        display: flex;
+        padding: 8.205px 21.881px 21.881px 21.881px;
+        gap: 21.881px;
+
+        header {
+          min-height: 2.95rem;
+
+          h1 {
+            font-size: 1.5385rem;
+
+          }
+        }
+
+        .row p {
+          font-size: 0.68375rem;
+        }
+
+        .row img {
+          max-width: 100%;
+        }
+      }
+
+      .features {
+        flex-direction: column;
+      }
+
+      .additional-features {
+        .additional-features-header h1 {
+          font-size: 1.5rem;
+          margin: 0;
+        }
+
+        .bullet-points {
+          display: flex;
+          flex-direction: column;
+          padding: 1.5rem;
+
+          section {
+            h1 {
+              font-size: 1rem;
+            }
+
+            li {
+              font-size: 0.875rem;
+
+            }
+          }
+        }
+      }
+
+      .call-to-action {
+        padding-bottom: 2rem;
+
+        h1 {
+          font-size: 1.5rem;
+        }
+
+        p {
+          font-size: 1.25rem;
+        }
+      }
+
+    }
+  }
 }
