Adjust whatsnew 140 footer's positioning

--- a/assets/less/whatsnew-140.less
+++ b/assets/less/whatsnew-140.less
@@ -33,10 +33,11 @@ main {
   position: relative;
   margin-top: auto;
   margin-bottom: 0;
+  padding-left: 7.5rem;
   padding-bottom: 2rem;
   min-height: 10rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 
 
   .mzla {
