Revert "Adjust whatsnew 140 footer's positioning" as it affects other appeals.
This reverts commit be9bd90f31380659487b343330db46b36237e73e.

--- a/assets/less/whatsnew-140.less
+++ b/assets/less/whatsnew-140.less
@@ -33,11 +33,10 @@ main {
   position: relative;
   margin-top: auto;
   margin-bottom: 0;
-  padding-left: 7.5rem;
   padding-bottom: 2rem;
   min-height: 10rem;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 
 
   .mzla {
